--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -53,4 +53,5 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          bundle exec appraisal rails_${{ matrix.rails-version }} rake test
+          echo BUNDLE_GEMFILE=$BUNDLE_GEMFILE
+          bundle exec rake test
