--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,13 +6,14 @@ jobs:
 
     strategy:
       matrix:
+        ruby-version: [3.3.6]
+        rails-version:
+          - 71
+          - 72
+          - 80
         include:
-          - ruby-version: 3.2.5
+          - ruby-version: 3.2.6
             rails-version: 70
-          - ruby-version: 3.3.5
-            rails-version: 71
-          - ruby-version: 3.3.5
-            rails-version: 72
 
     env:
       BUNDLE_GEMFILE: ${{ github.workspace }}/gemfiles/rails_${{ matrix.rails-version }}.gemfile
